--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,29 @@
         app:layout_constraintLeft_toRightOf="@+id/etPokemonAmount"
         />
 
+    <TextView
+        android:id="@+id/tvResultado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etPokemonAmount"
+        android:text="Resultados"
+        android:textSize="25dp"
+        android:textColor="@color/black"
+/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvInfoEntries"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tvResultado"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_info"
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
